# multimaster

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: multimasterConfig.cmake.in
docs/: architecture.md  how-the-mesh-works.md
examples/: chat.cpp  ping.cpp
include/multimaster/: Config.hpp  Events.hpp  Mesh.hpp  PeerId.hpp  config.hpp  events.hpp  mesh.hpp  multimaster.hpp  peer_id.hpp  span.hpp
src/: Discovery.cpp  Discovery.hpp  EventLoop.cpp  EventLoop.hpp  GossipRouter.cpp  GossipRouter.hpp  Listener.cpp  Listener.hpp  Mesh.cpp  MeshImpl.cpp  MeshImpl.hpp  PeerConnection.cpp  PeerConnection.hpp  PeerId.cpp  PeerManager.cpp  PeerManager.hpp  Socket.cpp  Socket.hpp  Wire.cpp  Wire.hpp  buffer.hpp  crypto.cpp  crypto.hpp  discovery.cpp  discovery.hpp  event_loop.cpp  event_loop.hpp  gossip_router.cpp  gossip_router.hpp  listener.cpp  listener.hpp  membership.cpp  membership.hpp  mesh.cpp  mesh_impl.cpp  mesh_impl.hpp  peer_connection.cpp  peer_connection.hpp  peer_id.cpp  peer_manager.cpp  (+5 more)
tests/: CMakeLists.txt  crypto_test.cpp  dedup_test.cpp  identity_test.cpp  secure_smoke_test.cpp  smoke_test.cpp  test_harness.hpp  wire_test.cpp
